--- a/.hintrc
+++ b/.hintrc
@@ -9,6 +9,16 @@
         "button-name": "off",
         "link-name": "off"
       }
+    ],
+    "disown-opener": "off",
+    "no-inline-styles": "off",
+    "compat-api/css": [
+      "default",
+      {
+        "ignore": [
+          "-webkit-text-size-adjust"
+        ]
+      }
     ]
   }
 }
