done with the MC section 12

--- a/.hintrc
+++ b/.hintrc
@@ -19,6 +19,12 @@
           "-webkit-text-size-adjust"
         ]
       }
+    ],
+    "axe/forms": [
+      "default",
+      {
+        "label": "off"
+      }
     ]
   }
 }
